MediaComposer-BYOL/filecatalyst_2/filecatalystazuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
    "parameters": {
        "general-Name": {
            "type": "string"
        },
        "adminUsername": {
            "type": "string",
            "metadata": {
                "description": "Username for the Virtual Machine."
            }
        },
        "adminPassword": {
            "type": "securestring",
            "metadata": {
                "description": "Password for the Virtual Machine."
            }
        },
        "general-VnetResourceGroup": {
            "type": "string",
            "metadata": {
                "description": "Name of the Resource Group where the existing Vnet is deployed."
            }
        },
        "general-VnetName": {
            "type": "string",
            "metadata": {
                "description": "Name of the existing Virtual Network."
            }
        },
        "general-SubnetName": {
            "type": "string",
            "metadata": {
                "description": "Existing subnet in where VMs should be deployed"
            },
            "defaultValue": "default"
        },
        "_system-InstallURL": {
            "type": "string"
        },
        "filecatalystInstallName": {
            "type": "string",
            "defaultValue": "install_fc_server.exe",
            "metadata": {
                "description": "Filecatalyst Install File Name"
            }
        },
        "avidNexisClientInstallName": {
            "type": "string",
            "defaultValue": "AvidNEXISClient_Win64_20.3.1.14.msi",
            "metadata": {
                "description": "Avid Nexis Client Install Name"
            }
        }
    },
    "variables": {
        "uniqueName": "[parameters('general-Name')]",
        "subnetId": "[concat(resourceId(parameters('general-VnetResourceGroup'), 'Microsoft.Network/virtualNetworks/', parameters('general-VnetName')), '/subnets/',parameters('general-SubnetName'))]",
        "location": "[resourceGroup().location]",
        "nicName": "[concat(variables('uniqueName'),'-fcyst-nic')]",
        "publicIPAddressName": "[concat(variables('uniqueName'), '-ip')]",
        "vmName": "[variables('uniqueName')]",
        "networkSecurityGroupName": "[concat(variables('uniqueName'),'-fcyst-nsg')]",
        "adminUsername": "[parameters('adminUsername')]",
        "adminPassword": "[parameters('adminPassword')]",
        "scriptFileName": "installFilecatalyst.ps1",
        "vmSize": "Standard_D8_v3",
        "_githubLocation": "https://raw.githubusercontent.com/benjamin-ghis/VideoEditorialInTheCloud/master/MediaComposer-BYOL",
        "filecatalystInstallName": "[parameters('filecatalystInstallName')]",
        "avidNexisClientInstallName": "[parameters('avidNexisClientInstallName')]",
        "scriptLocation": "[concat(variables('_githubLocation'), '/','scripts')]",
        "filecatalystInstallLocation": "[concat(parameters('_system-InstallURL'), '/','installers','/',variables('filecatalystInstallName'))]",
        "avidNexisClentInstallLocation": "[concat(parameters('_system-InstallURL'), '/','installers','/',variables('avidNexisClientInstallName'))]",
        "scriptParameters": "[concat('-FileCatalystURL ', variables('filecatalystInstallLocation'),' -AvidNEXISClientURL ', variables('avidNexisClentInstallLocation'))]",
        "scriptFolder": ".",
        "networkSecurityGroupRules": [
            {
                "name": "RemoteAccessRDP",
                "properties": {
                    "priority": 100,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "3389"
                }
            },
            {
                "name": "RemoteAccessSSH",
                "properties": {
                    "priority": 110,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "22"
                }
            },
            {
                "name": "Allow-80-In",
                "properties": {
                    "priority": 200,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "80"
                }
            },
            {
                "name": "Allow-80-Out",
                "properties": {
                    "priority": 205,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Outbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "80"
                }
            },
            {
                "name": "Allow-8080",
                "properties": {
                    "priority": 210,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "8080"
                }
            },
            {
                "name": "FileCatalyst-Admin",
                "properties": {
                    "priority": 215,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "12400"
                }
            },
            {
                "name": "FileCatalyst-Data-Port",
                "properties": {
                    "priority": 240,
                    "protocol": "*",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "8000-8999"
                }
            },
            {
                "name": "FileCatalyst-Web-Admin",
                "properties": {
                    "priority": 250,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "12480"
                }
            },
            {
                "name": "FileCatalyst-Central-Port",
                "properties": {
                    "priority": 260,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "12500"
                }
            }
        ]
    },
  "resources": [
    {
      "apiVersion": "2017-06-01",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('publicIPAddressName')]",
      "location": "[variables('location')]",
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "name": "[variables('networkSecurityGroupName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2018-08-01",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": "[variables('networkSecurityGroupRules')]"
      },
      "tags": {}
    },
    {
      "apiVersion": "2018-04-01",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[variables('nicName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[variables('publicIPAddressName')]",
        "[variables('networkSecurityGroupName')]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]"
              },
              "subnet": {
                "id": "[variables('subnetId')]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2018-10-01",
      "name": "[variables('vmName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[variables('nicName')]"
      ],
      "properties": {
        "hardwareProfile": {
            "vmSize": "[variables('vmSize')]"
        },
        "osProfile": {
          "computerName": "[variables('vmName')]",
          "adminUsername": "[variables('adminUsername')]",
          "adminPassword": "[variables('adminPassword')]",
          "windowsConfiguration": {
            "provisionVmAgent": "true"
          },
          "secrets": [],
          "allowExtensionOperations": true
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "2016-Datacenter",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "name": "[concat(variables('vmName'),'-os-disk')]"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('nicName'))]"
            }
          ]
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "[concat(concat(variables('vmName'),'/create.FileCatalyst.v1.0.0'))]",
      "apiVersion": "2017-12-01",
      "location": "[variables('location')]",
      "dependsOn": [
        "[variables('vmName')]"
      ],
      "properties": {
        "publisher": "Microsoft.Compute",
        "type": "CustomScriptExtension",
        "typeHandlerVersion": "1.9",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "fileUris": [
            "[concat(variables('scriptLocation'), '/',variables('scriptFileName'))]"
          ],
          "commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -File ', variables('scriptFolder'), '/', variables('scriptFileName'), ' ', variables('scriptParameters'))]"
        }
      }
    }
  ],
  "outputs": {
    "FileCatalyst-IPAddress": {
      "type": "string",
      "value": "[reference(variables('publicIPAddressName'), '2016-03-30').IPaddress]"
    }
  }
}
